Challenge-Kubernetes/recipes-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recipes-site
  template:
    metadata:
      labels:
        app: recipes-site
    spec:
      containers:
      - name: recipe-container
        image: martinsteinmayer/recipes-website:latest
